# CasualAPI

./: package-lock.json  package.json  vite.config.ts
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
